# WorldWindRose

./: .env.example  .gitignore  Dockerfile  Dockerfile.production  README.md  docker-compose.production.yml  docker-compose.yml  hybrid_assistant.py  main.py  nginx.conf  pyproject.toml  requirements.txt  security_layer.py  tools.py
.claude/: launch.json
config/: models.yaml  policies.yaml  settings.yaml
core/: app.py  config.py  policies.py  router.py
core/agents/: __init__.py  content_pipeline.py  factory.py  researcher.py  smart_parser.py  swarm.py
core/api/: agents.py  audit.py  cache.py  capabilities.py  chat.py  coding.py  economy.py  files.py  folders.py  fs.py  ingest.py  integrations.py  knowledge.py  mac.py  memory.py  metacognition.py  models.py  pal.py  (+18 more)
desktop/: app.js  index.html  manifest.json  style.css  sw.js
docs/: API.md  API_v5.md  ARCHITECTURE.md  ARCHITECTURE_v5.md  CONSTITUTION.md  DEPLOYMENT_VPS.md  MEMORY_ARCHITECTURE.md  MODULES.md  PLAN.md  PLAN_v3.md  RELEASE_v5.md  RELEASE_v6.md  ROADMAP_SUPERJARVIS.md  ROADMAP_v5.md  SELF_IMPROVEMENT.md
memory/: SOUL.md
scripts/: deploy_vps.sh  setup_cloudflare_tunnel.sh  setup_full.sh  start_rosa.sh  sync_memory.sh
tests/: test_api.py  test_block1_memory.py  test_block2_metacognition.py  test_block3_deployment.py  test_block4_knowledge.py  test_block5_audit.py  test_block6_router.py  test_block7_patterns.py  test_block8_transparency.py  test_block9_autonomy.py  test_knowledge.py  test_memory.py  test_models_router.py  test_new_modules.py  test_router.py  test_skills.py  test_v5_modules.py
(+101 files in other folders)
